--- a/SearchPhotoApp.csproj
+++ b/SearchPhotoApp.csproj
@@ -106,5 +106,8 @@
   <ItemGroup>
     <Resource Include="photos.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
