fix open project error delete non exitsing icon

--- a/SearchPhotoApp.csproj
+++ b/SearchPhotoApp.csproj
@@ -35,7 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>photos.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -102,9 +103,6 @@
       <Project>{675f4f6f-7ab9-4d3a-9152-39996b941149}</Project>
       <Name>SearchPhotoLibrary</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="photos.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
